--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -5,12 +5,12 @@ title = "Bigspring Hugo"
 contentDir = "content/english" # content/english
 weight = 1
 ########### footer content ##########
-footer_menu_left = "Company"
+footer_menu_left = "Importante"
 footer_menu_middle = "Product"
-footer_menu_right = "Support"
-footer_content = "Lorem ipsum dolor sit amet, consectetur elit. Consjat tristique eget amet, tempus eu at cttur."
+footer_menu_right = "Administrativo"
+footer_content = "zaz"
 # copyright
-copyright = "Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
+copyright = "José Luis Manzanares Rivera site Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
 
 
 
