--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://statistics-1-mdr.netlify.app
+baseURL: https://estadistica-1-mdr-2022.netlify.app/
 title: ASAS
 theme: bigspring-light
 paginate: '3'
