--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -20,6 +20,6 @@ copyright = "José Luis Manzanares Rivera site Design By [Themefisher](https://t
 footer_menu_left = "Materiales de apoyo"
 footer_menu_middle = "Ayuda para repaso"
 footer_menu_right = "Docs Administrativos"
-footer_content = "Animate y aprende nuevas habilidades. La estadistica es una herramienta poderosa para generar información."
+footer_content = "Anímate y aprende nuevas habilidades. La estadística es una herramienta poderosa para generar información."
 # copyright
 copyright = "José Luis Manzanares Rivera. Los materiales disponibes se ofrecen con fines educativos bajo la filosofía de difusión universal del conocimiento. Design by [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
